# smart-contract-analyzer

./: CONTRIBUTING.md  Cargo.toml  ENHANCEMENT_SUMMARY.md  LICENSE  README.md  RESEARCH_ANALYSIS.md  SECURITY.md  TESTING.md  run-tests.ps1  test.sh  test_contract.sol
assets/: report.css
examples/: test_enhanced.rs
src/: lib.rs  main.rs
src/analyzer/: enhanced_analyzer.rs  gas_analyzer.rs  mod.rs
src/analyzer/gas/: dynamic_analyzer.rs  mod.rs  optimizer.rs  static_analyzer.rs
src/analyzer/reports/: formatter.rs  generator.rs  mod.rs
src/analyzer/vulnerabilities/: detector.rs  enhanced_detector.rs  mod.rs  patterns.rs  rules.rs
src/blockchain/: client.rs  contract.rs  mod.rs  simulation.rs
src/cli/: args.rs  commands.rs
src/config/: settings.rs
src/detector/: enhanced_detector.rs  mod.rs
src/parser/: abi.rs  bytecode.rs  enhanced_solidity.rs  enhanced_solidity_temp.rs  mod.rs  solidity.rs
src/types/: analysis.rs  contract.rs  mod.rs  vulnerability.rs
src/utils/: errors.rs  helpers.rs  mod.rs
test-contracts/secure/: secure-bank.sol  secure-token.sol
test-contracts/vulnerable/: access-control.sol  integer-overflow.sol  reentrancy.sol  timestamp-dependence.sol  unchecked-returns.sol  unprotected-selfdestruct.sol
