[pack[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
sha2 = "0.10"
regex = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }"smart-contract-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
sha2 = "0.10"
regex = "1.0"
toml = "0.9.5"

[dev-dependencies]
tokio-test = "0.4"
