[package]
name = "smart-contract-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
sha2 = "0.10"
regex = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
# Enhanced dependencies for improved analysis
rayon = "1.7"                    # Parallel processing
walkdir = "2.4"                  # Directory traversal
indicatif = "0.17"               # Progress bars
colored = "2.0"                  # Colored terminal output
anyhow = "1.0"                   # Enhanced error handling
thiserror = "1.0"                # Custom error types
semver = "1.0"                   # Semantic versioning
petgraph = "0.6"                 # Graph algorithms for call graphs
tempfile = "3.8"                 # Temporary files for testing
log = "0.4"                      # Logging framework
env_logger = "0.10"              # Environment-based logging
uuid = { version = "1.0", features = ["v4"] } # Unique identifiers
once_cell = "1.19"               # Lazy static initialization
dashmap = "5.5"                  # Concurrent HashMap
futures = "0.3"                  # Async utilities

[dev-dependencies]
tokio-test = "0.4"
